# langchain-rs

./: .gitignore  Cargo.toml  README.md
examples/: qa_and_chat_over_documents.rs
src/: lib.rs  text_splitter.rs
src/chains/: base.rs  mod.rs
src/chains/retrieval_qa/: base.rs
src/chat_models/: mod.rs  openai.rs
src/document_loaders/: browser.rs  mod.rs  slack.rs
src/embeddings/: mod.rs  openai.rs
src/schema/: document.rs  language_model.rs  message.rs  mod.rs  output.rs  prompt.rs  retriever.rs
src/vectorstores/: inmemory.rs  mod.rs
